# zrag

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
tests/: conftest.py  test_chunking.py  test_cli.py  test_collection.py  test_context.py  test_daemon.py  test_formats.py  test_get.py  test_ingestion.py  test_performance.py  test_sdk.py  test_search.py
tests/test_corpus/code/: cpp_data_structures.cpp  go_concurrency.go  javascript_async.js  python_data_structures.py  rust_memory.rs  typescript_react_hooks.ts
tests/test_corpus/history/: renaissance.md
tests/test_corpus/philosophy/: stoicism.md
tests/test_corpus/science/: biodiversity.md  climate_change.md  crispr_gene_editing.md
tests/test_corpus/technology/: ai_machine_learning.md  quantum_computing.md  space_exploration.md
zrag/: __init__.py  chunking.py  cli.py  config.py  context.py  core.py  daemon.py  embeddings.py  file_processing.py  formatters.py  mcp_server.py  sdk.py
