[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zrag"
version = "1.0.0"
description = "Local-first, high-performance CLI application and embedded RAG engine built on zvec"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "EvolvDK"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "zvec",
    "tiktoken",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-rust",
    "tree-sitter-go",
    "tree-sitter-typescript",
    "tree-sitter-cpp",
    "pymupdf4llm",
    "Pillow",
    "torch",
    "open-clip-torch",
    "sentence-transformers",
    "dashtext",
    "openai",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "python-docx>=0.8.11",
    "markdownify>=0.11.6",
    "requests>=2.31.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
zrag = "zrag.cli:main"

[project.urls]
Homepage = "https://github.com/EvolvDK/zrag"
Repository = "https://github.com/EvolvDK/zrag"

[tool.hatch.build.targets.wheel]
packages = ["zrag"]

[tool.pytest.ini_options]
markers = [
    "perf: performance benchmark tests (run with -m perf)",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
